--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,8 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "^3.9"
-typer = "^0.9.0"
+typer = "0.9.0"
+click = "^8.1.3"
 rich = "^13.4.2"
 pydantic = "^2.0.0"
 tomli = "^2.0.1"
