--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ pylint = "^2.17.0"
 flake8 = "^6.0.0"
 bandit = "^1.7.5"
 openai = "^1.0.0"
-# pyautogen will be added when implementing agent orchestration
+pyautogen = "^0.2.0"
 pathspec = "^0.11.1"
 colorama = "^0.4.6"
 markdown = "^3.4.3"
