--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.9,<3.13"
 typer = "0.9.0"
 click = "^8.1.3"
 rich = "^13.4.2"
@@ -32,7 +32,7 @@ pylint = "^2.17.0"
 flake8 = "^6.0.0"
 bandit = "^1.7.5"
 openai = "^1.0.0"
-pyautogen = "^0.2.0"
+pyautogen = {version = "^0.2.0", python = ">=3.9,<3.13"}
 pathspec = "^0.11.1"
 colorama = "^0.4.6"
 markdown = "^3.4.3"
