--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-vaahai = "vaahai.cli.main:app"
+vaahai = "vaahai.cli.main:main"
 
 [tool.black]
 line-length = 88
