--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,11 +9,12 @@ packages = [{include = "vaahai"}]
 
 [tool.poetry.dependencies]
 python = ">=3.9,<4.0"
-typer = "==0.7.0"
+typer = "0.4.2"
 inquirerpy = "^0.3.4"
 rich = "^13.4.2"
 python-dotenv = "^1.0.0"
 packaging = ">=22.0,<25.0"
+click = "8.0.4"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.3.1"
