--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ isort = "^5.12.0"
 flake8 = "^6.0.0"
 mypy = "^1.3.0"
 toml = "^0.10.2"
+pre-commit = "^4.2.0"
 
 [build-system]
 requires = ["poetry-core"]
