--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,13 +8,19 @@ license = "MIT"
 packages = [{include = "vaahai"}]
 
 [tool.poetry.dependencies]
-python = ">=3.9,<4.0"
+python = ">=3.10,<4.0"
 typer = "0.4.2"
 inquirerpy = "^0.3.4"
 rich = "^13.4.2"
 python-dotenv = "^1.0.0"
 packaging = ">=22.0,<25.0"
 click = "8.0.4"
+autogen-agentchat = ">=0.5.7,<0.6.0"
+autogen-ext = {version = ">=0.5.7,<0.6.0", extras = ["docker"]}
+setuptools = ">=80.9.0,<81.0.0"
+docker = ">=7.1.0,<8.0.0"
+tiktoken = "^0.9.0"
+jsonschema = "^4.24.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.3.1"
