fixed unit tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,3 +59,8 @@ testpaths = ["tests"]
 python_files = "test_*.py"
 python_classes = "Test*"
 python_functions = "test_*"
+markers = [
+    "unit: marks tests as unit tests",
+    "integration: marks tests as integration tests",
+    "slow: marks tests as slow running"
+]
