--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ jsonschema = ">=4.24.0,<5.0.0"
 autogen-ext = "==0.6.1"
 autogen-extensions = "==0.0.1"
 autogen-agentchat = "^0.6.1"
+toml = "^0.10.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = ">=7.3.1,<8.0.0"
