--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,9 @@ autogen-ext = "==0.6.1"
 autogen-extensions = "==0.0.1"
 autogen-agentchat = "^0.6.1"
 toml = "^0.10.2"
+tomli-w = "^1.2.0"
+pyyaml = "^6.0.2"
+jinja2 = "^3.1.6"
 
 [tool.poetry.group.dev.dependencies]
 pytest = ">=7.3.1,<8.0.0"
