--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ toml = "^0.10.2"
 tomli-w = "^1.2.0"
 pyyaml = "^6.0.2"
 jinja2 = "^3.1.6"
+pytest-asyncio = "<1.0.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = ">=7.3.1,<8.0.0"
